--- a/Edu1.html
+++ b/Edu1.html
@@ -112,7 +112,9 @@
     <section id="about" class="about section">
         <div class="container">
             <h2 class="title text-center">Educational EEG data base ABSTRACT</p>
-	<p class="intro  text-center">The database of electroencephalogram project<br/>Posted on July 31, 2018<br/>The dataset of this project consists of two parts: [Read More] </p>
+		<p class="intro  text-center">The database of electroencephalogram project</p>
+		<p class="intro  text-center">Posted on July 31, 2018</p>
+		<p class="intro  text-center">The dataset of this project consists of two parts: [Read More] </p>
             
 		 
 
