--- a/abstract.html
+++ b/abstract.html
@@ -58,9 +58,9 @@
                     <ul class="nav navbar-nav">
                         <li class="nav-item sr-only"><a class="nav-link scrollto" href="#promo">Home</a></li>
                         <li class="nav-item"><a class="nav-link scrollto" href="#about">About</a></li>
-                        <li class="nav-item"><a class="nav-link scrollto" href="#features">Features</a></li>
-                        <li class="nav-item"><a class="nav-link scrollto" href="#docs">Docs</a></li>
-                        <li class="nav-item"><a class="nav-link scrollto" href="#license">License</a></li>                        
+                        <!--<li class="nav-item"><a class="nav-link scrollto" href="#features">Features</a></li>
+                       <!-- <li class="nav-item"><a class="nav-link scrollto" href="#docs">Docs</a></li>
+                        <!--<li class="nav-item"><a class="nav-link scrollto" href="#license">License</a></li>  -->                      
                         <li class="nav-item last"><a class="nav-link scrollto" href="#contact">Contact</a></li>
                     </ul><!--//nav-->
                 </div><!--//navabr-collapse-->
@@ -71,8 +71,8 @@
     <!-- ******PROMO****** -->
     <section id="promo" class="promo section offset-header">
         <div class="container text-center">
-            <h2 class="title">Educational EEG data base</span></h2>
-            <p class="intro">EduEEGDB </p>
+            <h2 class="title"></h2>
+            <p class="intro"></p>
                           <!-- <div class="btns">
                 <a class="btn btn-cta-secondary" href="https://themes.3rdwavemedia.com/" target="_blank">Demo</a>
                 <a class="btn btn-cta-primary" href="https://themes.3rdwavemedia.com/bootstrap-templates/startup/devaid-free-bootstrap-theme-for-developers-side-projects/" target="_blank">Download</a>
