--- a/Edu1.html
+++ b/Edu1.html
@@ -58,8 +58,8 @@
                     <ul class="nav navbar-nav">
                         <li class="nav-item sr-only"><a class="nav-link scrollto" href="#promo">Home</a></li>
                         <li class="nav-item"><a class="nav-link scrollto" href="#about">About</a></li>
-                        <!--<li class="nav-item"><a class="nav-link scrollto" href="#features">Features</a></li>
-                        <li class="nav-item"><a class="nav-link scrollto" href="#docs">Docs</a></li>
+                        <li class="nav-item"><a class="nav-link scrollto" href="#features">Features</a></li>
+                       <!-- <li class="nav-item"><a class="nav-link scrollto" href="#docs">Docs</a></li>
                         <li class="nav-item"><a class="nav-link scrollto" href="#license">License</a></li>                        
                         <li class="nav-item last"><a class="nav-link scrollto" href="#contact">Contact</a></li>-->
                     </ul><!--//nav-->
