--- a/abstract.html
+++ b/abstract.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Bootstrap 4 Theme for Developers</title>
+    <title>ABSTRACT</title>
     <!-- Meta -->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -113,11 +113,12 @@
             <h2 class="title text-center">Educational EEG data base ABSTRACT</h2>            
             <div class="block">
                 <h3>The database of electroencephalogram project</h3>
-                <p><strong>The dataset of this project consists of two parts:</p>
-                <p></strong>1.Testing images.</strong>This part contains two kinds of static images. All these images are used to generate confused/non-confused emotions by visually stimulating the volunteer’s brain. One consists of 10 peaceful landscape pictures (Used to stimulate non-confusing emotion) and the other consists of 48 complicated reasoning problem pictures (Used to stimulate confusion emotion).</p>
-	    <p></strong>2.EEG data.</strong> When the volunteers are observing the testing images, eight sensors of the EEG headset collect their brainwave data at a frequency of 250Hz. The EEG data related to every image will be recorded in a single file. So there are 58 files in a experiment subject. Our project contains 25 subjects from 25 volunteers.</p>
+                <li><strong>The dataset of this project consists of two parts:<li>
+                <li></strong>1.Testing images.</strong>This part contains two kinds of static images. All these images are used to generate confused/non-confused emotions by visually stimulating the volunteer’s brain. One consists of 10 peaceful landscape pictures (Used to stimulate non-confusing emotion) and the other consists of 48 complicated reasoning problem pictures (Used to stimulate confusion emotion).</li>
+	    <li></strong>2.EEG data.</strong> When the volunteers are observing the testing images, eight sensors of the EEG headset collect their brainwave data at a frequency of 250Hz. The EEG data related to every image will be recorded in a single file. So there are 58 files in a experiment subject. Our project contains 25 subjects from 25 volunteers.</li>
 	    <ul class="list-unstyled">
-                    <li><strong>Compression level:</strong> Minified</li>
+		          <h3>Testing Images</h3>
+                    <li>The selection principle of the landscape picture is that the picture is wide vision, the color is moderate, the light color is brighter, making the volunteer comfortable and clam, like beach, sunset, mountain, river valley, lake and so on.</li>
                     <li><strong>Theme:</strong> Okaidia</li>
                     <li><strong>Languages:</strong> Markup, CSS, C-like, JavaScript, PHP and Python</li>
                 </ul>
