--- a/abstract.html
+++ b/abstract.html
@@ -115,13 +115,17 @@
                 <h3>The database of electroencephalogram project</h3>
                 <p><strong>The dataset of this project consists of two parts:</strong></p>
                 <p><strong>1.Testing images.</strong>This part contains two kinds of static images. All these images are used to generate confused/non-confused emotions by visually stimulating the volunteer’s brain. One consists of 10 peaceful landscape pictures (Used to stimulate non-confusing emotion) and the other consists of 48 complicated reasoning problem pictures (Used to stimulate confusion emotion).</p>
-	    <p></strong>2.EEG data.</strong> When the volunteers are observing the testing images, eight sensors of the EEG headset collect their brainwave data at a frequency of 250Hz. The EEG data related to every image will be recorded in a single file. So there are 58 files in a experiment subject. Our project contains 25 subjects from 25 volunteers.</p>
+	    <p><strong>2.EEG data.</strong> When the volunteers are observing the testing images, eight sensors of the EEG headset collect their brainwave data at a frequency of 250Hz. The EEG data related to every image will be recorded in a single file. So there are 58 files in a experiment subject. Our project contains 25 subjects from 25 volunteers.</p>
 	    <ul class="list-unstyled">
 		          <h3>Testing Images</h3>
 		     <p><strong>The image set contains 58 pictures (10 landscape pictures and 48 reasoning problem pictures)</strong></p>
                     <p>The selection principle of the landscape picture is that the picture is wide vision, the color is moderate, the light color is brighter, making the volunteer comfortable and clam, like beach, sunset, mountain, river valley, lake and so on.</p>
-                    
-                </ul>
+		    <p>The reasoning problem pictures are from Raven’s Standard Progressive Matrices (SPM). Every picture has a hidden regular pattern. There are 12 standard-level problem pictures and 36 high-level problem pictures in this image set. The selection principle of these pictures is that the picture is clear and the test content is relatively complicated so the volunteer will take time to think about the solution and stay in confusion for a while.</p>
+		    <p><strong>The testing process takes about 15 minutes and is divided into three parts.</strong></p>
+		    <p>1.Showing the landscape pictures. Each picture lasts for 10s and no stop in the process.</p>
+		    <p>2.Showing the reasoning problem pictures. When volunteer is ready, the experiment begins. Each picture lasts up to 10s. If the volunteer has already choose an answer, the next picture will appear immediately.</p>
+		    <p>3.Confidence test. Replay the second part of the pictures, then the volunteer chooses the options that whether he or she comes up with the answer. So we can find out whether the volunteer is staying in confusion.</p>
+		    </ul>
                 <div class="code-block">
                     <!--//Use Prismjs - http://prismjs.com/index.html#basic-usage -->
                     <pre><code class="language-markup">
