--- a/abstract.html
+++ b/abstract.html
@@ -126,6 +126,8 @@
 		    <p>2.Showing the reasoning problem pictures. When volunteer is ready, the experiment begins. Each picture lasts up to 10s. If the volunteer has already choose an answer, the next picture will appear immediately.</p>
 		    <p>3.Confidence test. Replay the second part of the pictures, then the volunteer chooses the options that whether he or she comes up with the answer. So we can find out whether the volunteer is staying in confusion.</p>
 		    <h3>EEG Data</h3>
+		    <li>Original data</li>
+		    <p>Our project contains 25 subjects. In every file, data is recorded as rows, one record corresponds to one row. There are 250 records in every second (collecting frequency is 250Hz). In Original data, a record has 11 columns. The first column is the serial number of the record. The second column to ninth column record the data of 8 sensors. The tenth column records the trigger (When come to next picture, the EEG headset will send a trigger to the collecting computer). And the eleventh column records the time mark.</p>
 		    </ul>
                 <div class="code-block">
                     <!--//Use Prismjs - http://prismjs.com/index.html#basic-usage -->
