--- a/abstract.html
+++ b/abstract.html
@@ -68,10 +68,11 @@
         </div>
     </header><!--//header-->
     
-    <!-- ******PROMO****** -->
+    <!-- ******PROMO****** 
     <section id="promo" class="promo section offset-header">
         <div class="container text-center">
-            <h2 class="title"></h2>
+        </div>-->
+           <!-- <h2 class="title"></h2>
             <p class="intro"></p>
                           <!-- <div class="btns">
                 <a class="btn btn-cta-secondary" href="https://themes.3rdwavemedia.com/" target="_blank">Demo</a>
@@ -82,9 +83,9 @@
                 <li class="list-inline-item"><a href="https://themes.3rdwavemedia.com/bootstrap-templates/startup/devaid-free-bootstrap-theme-for-developers-side-projects/" target="_blank">Full Documentation</a></li>
                 <li class="list-inline-item">Created by: <a href="https://themes.3rdwavemedia.com/" target="_blank">Xiaoying Riley</a> at 3rd Wave Media</li>
             </ul><!--//meta-->
-       </div><!--//container-->
-        <div class="social-media">
-            <div class="social-media-inner container text-center">
+       <!--</div><!--//container-->
+       <!-- <div class="social-media">
+          <!--  <div class="social-media-inner container text-center">
                  <!--<ul class="list-inline mb-2">
                     <li class="list-inline-item twitter-follow"><a href="https://twitter.com/3rdwave_themes" class="twitter-follow-button" data-show-count="false">Follow @3rdwave_themes</a>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
@@ -100,10 +101,11 @@
                      <!--<li class="list-inline-item github-star">
 <a class="github-button" href="https://github.com/xriley/devaid-theme" data-icon="octicon-star" aria-label="Star xriley/devaid-theme on GitHub">Star</a></li>
                      <!--<li class="list-inline-item github-follow"><!-- Place this tag where you want the button to render. -->
- <!--<a class="github-button" href="https://github.com/xriley" aria-label="Follow @xriley on GitHub">Follow @xriley</a></li> -->  
-      </ul>
-            </div>
-        </div>
+<!--<a class="github-button" href="https://github.com/xriley" aria-label="Follow @xriley on GitHub">Follow @xriley</a></li> -->
+   <!--   </ul>-->
+           <!-- </div>-->
+             <!--  </div>-->
+<!--
    </section><!--//promo-->
           
   <!-- ******DOCS****** --> 
