--- a/abstract.html
+++ b/abstract.html
@@ -57,7 +57,7 @@
                 <div class="navbar-collapse collapse" id="navbar-collapse">
                     <ul class="nav navbar-nav">
                         <li class="nav-item sr-only"><a class="nav-link scrollto" href="#promo">Home</a></li>
-                        <li class="nav-item"><a class="nav-link scrollto" href="#about">About</a></li>
+                        <li class="nav-item"><a class="nav-link scrollto"><a href="Edu1.html">About</a></li>
                         <!--<li class="nav-item"><a class="nav-link scrollto" href="#features">Features</a></li>
                        <!-- <li class="nav-item"><a class="nav-link scrollto" href="#docs">Docs</a></li>
                         <!--<li class="nav-item"><a class="nav-link scrollto" href="#license">License</a></li>  -->                      
