--- a/Edu1.html
+++ b/Edu1.html
@@ -115,7 +115,9 @@
 		<p>The database of electroencephalogram project</p>
 		<p>Posted on July 31, 2018</p>
 		<p>The dataset of this project consists of two parts: [Read More] </p>
-            
+             <p class="text-center">
+                    <a class="btn btn-cta-primary" href="https://github.com/xriley/devAid-Theme" target="_blank">Download</a>
+                </p>
 		 
 
             <div class="row">
