--- a/Edu1.html
+++ b/Edu1.html
@@ -116,7 +116,7 @@
 		<p>Posted on July 31, 2018</p>
 		<p>The dataset of this project consists of two parts: [Read More] </p>
              <p class="text-center">
-                    <a class="btn btn-cta-primary" href="https://github.com/xriley/devAid-Theme" target="_blank">Download</a>
+                    <a class="btn btn-cta-primary" href="assets/documents/05.pdf"target="_blank">Download</a>
                 </p>
 		 
 
