--- a/about.html
+++ b/about.html
@@ -187,7 +187,7 @@
 									    </div><!--//resume-timeline-item-header-->
 						        <div class="resume-timeline-item-desc">
                                                           <P><a href="Edu1.html">Confusion EEG DB</a></P>
-                                                          <P><a href="forspatial.html">FORSpatial</a></P>
+                                                          <P><a href="FORSpatial.html">FORSpatial</a></P>
 						    </div>
 		    </div><!--//resume-body-->
 		    
