--- a/index.html
+++ b/index.html
@@ -145,6 +145,7 @@
 									 
 										    <p>基于上下文的智能感知交互模式与系统<br/>周筠 徐韬<br/>2015.11陕西师范大学出版社</p>
 										    <div class="resume-position-time">期刊 </div>
+										    <p>The influences of a virtual instructor's voice and appearance on learning from video lectures <a href="assets/documents/15.pdf" download>(PDF)</a><br/>Pi, Z., Deng, L., Wang, X., Guo, P., Xu, T., Zhou, Y.<br/>Journal of Computer Assisted Learning, 2022</p>
 										    <p>Decode Brain System: A Dynamic Adaptive Convolutional Quorum Voting Approach for Variable-Length EEG Data <a href="assets/documents/14.pdf" download>(PDF)</a><br/>Xu, T., Zhou, Y., Hou, Z., Zhang, W.<br/>Complexity, 2020:1-9, 2020</p>
 										    <p>Beyond Engagement: an EEG-based Methodology for Assessing User's Confusion in Educational Game <a href="assets/documents/13.pdf" download>(PDF)</a><br/>Zhou, Y., Xu, T., Li, S., Shi R.<br/>Universal Access in the Information Society, accepted, 2019</p>
 										    <p>User Attitudes and Behaviors towards Personalized Control of Privacy Settings on Smartphones <a href="assets/documents/01.pdf" download>(PDF)</a><br/>Zhou, Y., Qi L., Raake A., Xu T.<br/>Piekarska M., Zhang X. Concurrency and Computation Practice and Experience, online, 2018</p>
@@ -154,7 +155,7 @@
 										    <p>Elders’ fall detection based on biometrics features by the depth camera (PDF)<br/>Xu, T. Zhou, Y.<br/>International Journal of Wavelets, Multiresolution and Information Processing, 16(2) 2018</p>
 										    <p>Fall prediction based on biomechanics equilibrium using Kinect <a href="assets/documents/05.pdf" download>(PDF)</a><br/>Xu, T. Zhou, Y.<br/>International Journal of Distributed Sensor Networks, 13(4) 2017</p>
 										    <p>Smart Brain: an Intelligence Context Inference Engine for Context-aware Middleware (PDF)<br/>Xu, T. Zhou, Y., David, B., Chalon, R.<br/>International Journal of Sensor Networks, 22(3):145-157, 2016</p>
-
+                                                                                    										     									      
                                                                                     <div class="resume-position-time">会议 </div>
 										    <p>Guess or Not? A Brain-Computer Interface Using EEG Signals for Revealing the Secret behind Scores.<a href="assets/documents/06-2.mp4" download>(VEDIO)</a> <a href="assets/documents/06.pdf" download>(PDF)</a><br/>Xu, T., Zhou, Y., Wang Y., Zhao Z., Li S.<br/>In CHI Conference on Human Factors in Computing Systems Extended Abstracts (CHI’19 Extended Abstracts)</p>
 										    <p>Confusion State Induction and EEG-based Detection in Learning English <a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=8512943">(PDF)</a><br/>Zhou, Y., Xu, T., Li S., Li S.<br/>In 40th Annual International Conference of the IEEE Engineering in Medicine and Biology Society. 3290-3293. 2018</p>
